[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
jiff = "0.1.5"
lazy_static = "1.5.0"
fastant = "0.1"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "jiff_benchmark"
harness = false

[[bench]]
name = "fastant_benchmark"
harness = false

[[bench]]
name = "static_initialize_benchmark"
harness = false
